--- a/app/Resources/views/plan/show.html.twig
+++ b/app/Resources/views/plan/show.html.twig
@@ -42,6 +42,10 @@
                         <h4 class="card-title">{{ shift.start|date('H:i') }} - {{ shift.end|date('H:i') }}</h4>
                         <p>
                             {{ shift.description }}
+                        </p>
+                        <p>
+                            <i class="fa fa-users" aria-hidden="true"></i>: {{ shift.numberPeople }}
+                        </p>
                         <hr>
                         {% set count = shift.numberPeople - (shift.people|length) %}
                         {% set percent = 100 / shift.numberPeople * (shift.people|length) %}
@@ -96,7 +100,7 @@
                                                 </ul>
                                             </li>
                                         {% else %}
-                                            <li>{{ person.alias }}</li>
+                                            <li class="list-group-item alias-li">{{ person.alias }}</li>
                                         {% endif %}
                                     {% else %}
                                         <li>Person</li>
@@ -104,54 +108,8 @@
                                 {% endfor %}
                             </div>
                         </ul>
-                        </p>
                     </div>
-                    {#<tr class="wow fadeInUp">#}
-                    {#<th scope="row">{{ shift.title }}</th>#}
-                    {#<td>{{ shift.start|date('H:i') }}</td>#}
-                    {#<td>{{ shift.end|date('H:i') }}</td>#}
-                    {#<td>{{ shift.description }}</td>#}
-                    {#<td>#}
-                    {#<ol class="list-group">#}
-                    {#{% set count = shift.numberPeople - (shift.people|length) %}#}
-
-                    {#{% for person in shift.people %}#}
-                    {#{% if not plan.isTemplate %}#}
-                    {#{% if (is_granted('ROLE_USER') and app.user.id == plan.user.id) %}#}
-                    {#<li class="list-group-item flex-column align-items-start">#}
-                    {#<div class="d-flex w-100 justify-content-between">#}
-                    {#<span class="mb-1"><b>{{ person.name }}</b></span>#}
-                    {#<small>{% if is_granted('ROLE_USER') %}<a class="edit" href="{{ path('person_edit',{ 'id': person.id }) }}"><i class="fa fa-pencil pull-right" aria-hidden="true"></i></a>{% endif %}</small>#}
-                    {#</div>#}
-
-                    {#<ul id="person-details">#}
-                    {#{% if person.email %}<li><i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:{{ person.email }}?Subject=Kontakt Schichtplan: {{ plan.title }} " target="_top">{{ person.email }}</a></li>{% endif %}#}
-                    {#{% if person.phone %}<li><i class="fa fa-phone" aria-hidden="true"></i> {{ person.phone|phone_number_format('INTERNATIONAL') }}</li>{% endif %}#}
-                    {#</ul>#}
-                    {#</li>#}
-                    {#{% else %}#}
-                    {#<li class="list-group-item">{{ person.alias }}</li>#}
-                    {#{% endif %}#}
-                    {#{% else %}#}
-                    {#<li class="list-group-item">Person</li>#}
-                    {#{% endif %}#}
-                    {#{% endfor %}#}
-
-                    {#{% if count != 0 %}#}
-                    {#{% for person in 1..count %}#}
-                    {#{% if not plan.isTemplate %}#}
-                    {#<li class="list-group-item"><a class="text-nowrap" href="{{ path('person_new', { 'shift': shift.id }) }}">{% trans %}enroll{% endtrans %}</a> </li>#}
-                    {#{% else %}#}
-                    {#<li class="list-group-item">{% trans %}person{% endtrans %}</li>#}
-                    {#{% endif %}#}
-                    {#{% endfor %}#}
-                    {#{% endif %}#}
-                    {#</ol>#}
-                    {#</td>#}
-                    {#</tr>#}
                 {% endfor %}
-                {#</tbody>#}
-                {#</table>#}
             </div>
             <div class="ssk-sm ssk-group">
                 <a href="whatsapp://send?text={{ app.request.uri }}" class="ssk ssk-whatsapp hidden-md-up"></a>
