--- a/app/Resources/views/plan/show.html.twig
+++ b/app/Resources/views/plan/show.html.twig
@@ -8,12 +8,18 @@
         {% set isAuth = false %}
     {% endif %}
     <div class="col-12 justify-content-end">
-        <h1>{{ plan.title }}
+        <h1 id="plan-title">
+            {{ plan.title }}
             {% if plan.isTemplate %}
                 <span class="float-md-right badge badge-info">{{ 'template'|trans }}</span>
             {% else %}
-                {% if not plan.isTemplate %}<span
-                        class="float-right">{% if plan.date %}{{ plan.date|date('d.m.Y') }}{% endif %}</span>{% endif %}
+                {% if not plan.isTemplate %}
+                    <span class="float-right">
+                        {% if plan.date %}
+                            {{ plan.date|date('d.m.Y') }}
+                        {% endif %}
+                    </span>
+                {% endif %}
             {% endif %}
         </h1>
     </div>
@@ -33,90 +39,92 @@
             <a id="passwordPrompt" href="#"><i class="fa fa-eye" aria-hidden="true"></i> {% trans %}
                 show_details{% endtrans %}</a>
         {% endif %}
-
+    </div>
         {% if plan.shifts is not empty %}
-            <div class="row no-gutter">
-                {% for shift in plan.shifts %}
-                    <div class="card shift-card col-lg-3 col-md-4 col-12 ">
-                        <h2 class="card-title">{{ shift.title }}</h2>
-                        <h4 class="card-title">{{ shift.start|date('H:i') }} - {{ shift.end|date('H:i') }}</h4>
-                        <p>
-                            {{ shift.description }}
-                        </p>
-                        <p>
-                            <i class="fa fa-users" aria-hidden="true"></i>: {{ shift.numberPeople }}
-                        </p>
-                        <hr>
-                        {% set count = shift.numberPeople - (shift.people|length) %}
-                        {% set percent = 100 / shift.numberPeople * (shift.people|length) %}
+             {% for shift in plan.shifts %}
+                 <div class="col-lg-4 col-md-6 col-12">
+                     <div class="card shift-card">
+                         <div class="card-body">
+                            <h2 class="card-title">{{ shift.title }}</h2>
+                            <h4 class="card-title">{{ shift.start|date('H:i') }} - {{ shift.end|date('H:i') }}</h4>
+                            <p>
+                                {{ shift.description }}
+                            </p>
+                            <p>
+                                <i class="fa fa-users" aria-hidden="true"></i>: {{ shift.numberPeople }}
+                            </p>
+                            {% set count = shift.numberPeople - (shift.people|length) %}
+                            {% set percent = 100 / shift.numberPeople * (shift.people|length) %}
 
-                        <div class="progress" style="height: 20px">
-                            <div class="progress-bar" role="progressbar" style="width: {{ percent }}%; height: 20px"
-                                 aria-valuenow="{{ percent }}" aria-valuemin="0"
+                            <div class="progress" style="height: 20px">
+                                <div class="progress-bar" role="progressbar" style="width: {{ percent }}%; height: 20px"
+                                     aria-valuenow="{{ percent }}" aria-valuemin="0"
                                  aria-valuemax="{{ shift.numberPeople }}">{{ shift.people|length }}
                                 von {{ shift.numberPeople }}</div>
-                        </div>
-                        <hr>
-                        {% if not plan.isTemplate %}
-                            {% if shift.numberPeople != (shift.people|length)%}
-                                <a class="text-nowrap btn btn-primary"
-                                   href="{{ path('person_new', { 'shift': shift.id }) }}">
-                                    {% trans %}enroll{% endtrans %}
-                                </a>
-                                <hr>
-                            {% endif %}
-                        {% else %}
-                            <li class="list-group-item">{% trans %}person{% endtrans %}</li>
-                        {% endif %}
-
-                        <ul class="row">
-                            <div class="col-12">
-                                {% for person in shift.people %}
-                                    {% if not plan.isTemplate %}
-                                        {% if (is_granted('ROLE_USER') and app.user.id == plan.user.id) %}
-                                            <li class="list-group-item">
-                                                <span class="mb-1 col-10"><b>{{ person.name }}</b></span>
-                                                <small class="col-2">
-                                                    {% if is_granted('ROLE_USER') %}
-                                                        <a class="edit  pull-right" href="{{ path('person_edit',{ 'id': person.id }) }}">
-                                                            <i class="fa fa-pencil" aria-hidden="true"></i>
-                                                        </a>
-                                                    {% endif %}
-                                                </small>
-                                                <ul class="col-12">
-                                                    {% if person.email %}
-                                                        <li>
-                                                            <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                                                            <a class="mailto" href="mailto:{{ person.email }}?Subject=Kontakt Schichtplan: {{ plan.title }} "
-                                                               target="_top">{{ person.email }}
-                                                            </a>
-                                                        </li>
-                                                    {% endif %}
-                                                    {% if person.phone %}
-                                                        <li class="phone-number">
-                                                            <i class="fa fa-phone" aria-hidden="true"></i> {{ person.phone|phone_number_format('INTERNATIONAL') }}
-                                                        </li>
-                                                    {% endif %}
-                                                </ul>
-                                            </li>
-                                        {% else %}
-                                            <li class="list-group-item alias-li">{{ person.alias }}</li>
-                                        {% endif %}
-                                    {% else %}
-                                        <li>Person</li>
-                                    {% endif %}
-                                {% endfor %}
                             </div>
-                        </ul>
-                    </div>
+                            {% if not plan.isTemplate %}
+                                {% if shift.numberPeople != (shift.people|length)%}
+                                    <a class="text-nowrap btn btn-primary enroll-btn"
+                                       href="{{ path('person_new', { 'shift': shift.id }) }}">
+                                        {% trans %}enroll{% endtrans %}
+                                    </a>
+                                    <hr>
+                                {% endif %}
+                            {% else %}
+                                <li class="list-group-item">{% trans %}person{% endtrans %}</li>
+                            {% endif %}
+
+                            <ul class="row">
+                                <div class="col-12">
+                                    {% for person in shift.people %}
+                                        {% if not plan.isTemplate %}
+                                            {% if (is_granted('ROLE_USER') and app.user.id == plan.user.id) %}
+                                                <li class="list-group-item">
+                                                    <span class="mb-1 col-10"><b>{{ person.name }}</b></span>
+                                                    <small class="col-2">
+                                                        {% if is_granted('ROLE_USER') %}
+                                                            <a class="edit  pull-right" href="{{ path('person_edit',{ 'id': person.id }) }}">
+                                                                <i class="fa fa-pencil" aria-hidden="true"></i>
+                                                            </a>
+                                                        {% endif %}
+                                                    </small>
+                                                    <ul class="col-12">
+                                                        {% if person.email %}
+                                                            <li>
+                                                                <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                                                                <a class="mailto" href="mailto:{{ person.email }}?Subject=Kontakt Schichtplan: {{ plan.title }} "
+                                                                   target="_top">{{ person.email }}
+                                                                </a>
+                                                            </li>
+                                                        {% endif %}
+                                                        {% if person.phone %}
+                                                            <li class="phone-number">
+                                                                <i class="fa fa-phone" aria-hidden="true"></i> {{ person.phone|phone_number_format('INTERNATIONAL') }}
+                                                            </li>
+                                                        {% endif %}
+                                                    </ul>
+                                                </li>
+                                            {% else %}
+                                                <li class="list-group-item alias-li">{{ person.alias }}</li>
+                                            {% endif %}
+                                        {% else %}
+                                            <li>Person</li>
+                                        {% endif %}
+                                    {% endfor %}
+                                </div>
+                            </ul>
+                        </div>
+                     </div>
+                 </div>
                 {% endfor %}
-            </div>
-            <div class="ssk-sm ssk-group">
-                <a href="whatsapp://send?text={{ app.request.uri }}" class="ssk ssk-whatsapp hidden-md-up"></a>
-                <a href="" class="ssk ssk-facebook"></a>
-                <a href="" class="ssk ssk-twitter"></a>
-                <a href="" class="ssk ssk-email"></a>
-                <a href="" class="ssk ssk-google-plus"></a>
+            <div class="col-12">
+                <div class="ssk-sm ssk-group">
+                    <a href="whatsapp://send?text={{ app.request.uri }}" class="ssk ssk-whatsapp hidden-md-up"></a>
+                    <a href="" class="ssk ssk-facebook"></a>
+                    <a href="" class="ssk ssk-twitter"></a>
+                    <a href="" class="ssk ssk-email"></a>
+                    <a href="" class="ssk ssk-google-plus"></a>
+                </div>
             </div>
         {% else %}
             <div class="alert alert-warning" role="alert">
@@ -124,7 +132,6 @@
             </div>
             <img class="img-fluid." src="https://media.giphy.com/media/MmFVEhDzF0UUw/giphy.gif">
         {% endif %}
-</div>
         <div class="modal fade" id="getPasswordModel" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
              aria-hidden="true">
             <div class="modal-dialog" role="document">
