--- a/src/AppBundle/Resources/public/css/plan.css
+++ b/src/AppBundle/Resources/public/css/plan.css
@@ -12,30 +12,36 @@
     cursor: pointer;
 }
 
-.card .fa-bars {
-    margin-left: 0.5rem;
-}
-
 .add_shift_link {
     margin-top: 0.5rem !important;
 }
 
 .shift-card {
-    margin-top: 2rem;
     margin-bottom: 2rem;
-    margin-left: 1rem;
-}
-
-.shift-card > h2 {
-    margin-top: 1rem;
-}
-
-.two-cols {
-    -moz-column-count: 2;
-    -webkit-column-count: 2;
-    column-count:2;
 }
 
 .alias-li {
     padding: .5rem 1rem;
+}
+
+.card-title {
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
+}
+
+.card {
+    padding: 8px;
+}
+
+#plan-title {
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
+}
+
+.progress {
+    margin-bottom: .8rem;
 }
